--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,30 @@ body {
 a {
   color: #00B7FF;
 }
+
+.profile_pic {
+  border-radius: 50%;
+}
+
+#messages {
+  list-style-type: none;
+  padding-left: 0 !important;
+}
+
+#messages>li {
+  border-bottom: 1px solid #ede6fa;
+  padding: 15px;
+  height: 80px;
+}
+
+#message-left {
+  float: left;
+  clear: left;
+  display: block;
+  width: 50px;
+}
+
+#message-right {
+  padding: 8px;
+  margin-left: 60px;
+}
